--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,45 +1,124 @@
 /* Main webpage */
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap%22");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100%22");
+/* body {background-color:#121212} */
 #profileCircle {
+  position: fixed;
+  /* margin-top: 25%; */
   border-radius: 10vh;
-  background-color: #373737;
-  color: #373737;
   width: 100px;
   height: 100px;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
+  left: 10px;
+  top: 10px;
+  /* transform-origin: top left; */
 }
-#profileCircle:hover {
-  /* expand slowly to a square with rounded edges */
-  clip-path: circle(0% at 0% 0%);
-  border-radius: 2vh;
-  width: 400px;
-  height: 200px;
+#iniAge,
+#iniUntil,
+#nextBD {
+  color: gray;
+  font-family: "Ubuntu", sans-serif;
+}
+#iniAge {
+  font-size: 30px;
+}
+#iniUntil,
+#nextBD {
+  font-size: 25px;
+}
+#pfpimg {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100px;
+  height: 100px;
+}
+.noSelect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently*/
+}
+#smmove {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  width: 1000px;
+  height: 50px;
+}
+.sm:hover {
+  cursor: pointer;
+}
+.linebreak {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  width: 90vw;
+  height: 2px;
+  background-color: rgb(77, 77, 77);
+}
+.bottomOfPage {
+  bottom:0;
+  position:absolute;
+  left:9vh
 }
 
-@keyframes profileCircle {
-  0% {
-    border-radius: 10vh;
-    width: 100px;
-    height: 100px;
-  }
-  100% {
-    border-radius: 2vh;
-    width: 400px;
-    height: 200px;
-  }
+
+
+
+
+
+
+
+
+
+.discordPopup {
+  visibility: hidden;
+  width: 160px;
+  background-color: rgb(22, 189, 97);
+  color: #fff;
+  font-family: "Ubuntu", sans-serif;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
 }
-@keyframes unProfileCircle {
-  0% {
-    border-radius: 2vh;
-    width: 400px;
-    height: 200px;
-  }
-  100% {
-    border-radius: 10vh;
-    width: 100px;
-    height: 100px;
-  }
+
+/* Popup arrow */
+/* .discordPopup::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+
+} */
+
+/* Toggle this class - hide and show the popup */
+.show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+  cursor:pointer;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
 }
