--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,11 @@
   font-family: "Ubuntu", sans-serif;
 }
 #iniAge {
+  padding-top: 10px;
   font-size: 30px;
+}
+#nextBD {
+  visibility: hidden;
 }
 #iniUntil,
 #nextBD {
@@ -91,20 +95,6 @@
   margin-left: -80px;
 }
 
-/* Popup arrow */
-/* .discordPopup::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-
-} */
-
-/* Toggle this class - hide and show the popup */
 .show {
   visibility: visible;
   -webkit-animation: fadeIn 1s;
@@ -122,3 +112,18 @@
   from {opacity: 0;}
   to {opacity:1 ;}
 }
+
+.nextBDButton {
+  right:10px;
+  top:10px;
+  position: absolute;
+  border-radius: 10vw;
+  height:35px;
+  width:35px;
+  background-color: black;
+  border: 3px solid gray;
+  cursor:pointer;
+}
+/* on click */
+
+
