--- a/public/Main.css
+++ b/public/Main.css
@@ -128,9 +128,9 @@ span {
   margin-top: 20px;
 }
 .skillTextBox {
-    border-radius: 6px;
-    position:fixed;
-    top:20px;
+  border-radius: 6px;
+  position: fixed;
+  top: 20px;
   width: 80vw;
   height: 80vh;
   border: 1px solid #fff;
@@ -159,5 +159,40 @@ span {
 }
 
 .closeX {
-    cursor: pointer;
+  cursor: pointer;
+  z-index:7;
 }
+/* .number1 {
+  color: white;
+  z-index: 5;
+}
+div#numberContainer1,
+div#numberContainer2,
+div#numberContainer3,
+div#numberContainer4 {
+  font-size: 40px;
+  width: 20px;
+  height: 50px;
+  word-wrap: break-word;
+  overflow-y: hidden;
+}
+number {
+  color: white;
+  z-index: 5;
+}
+#themastercontainer {
+  top: 550px;
+  position: fixed;
+  width: auto;
+  height: auto;
+  word-wrap: normal;
+  position: absolute;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+}
+div#numberContainer1#number1 {
+}
+html {
+  scroll-behavior: smooth;
+} */
