--- a/public/Main.css
+++ b/public/Main.css
@@ -41,7 +41,7 @@ span {
 .nodejsBox {
   background-size: 80px 90px;
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 800px) {
   .skillBox {
     height: 6rem;
     width: 6rem;
@@ -68,7 +68,67 @@ span {
     background-size: 2.25rem 2.5rem;
   }
 }
-
+@media screen and (max-width: 800px) {
+    .skillBox {
+        height: 5.5rem;
+        width: 5.5rem;
+        background-size: 4rem 4.5rem;
+      }
+      .reactBox {
+        background-size: 4.75rem 4.5rem;
+      }
+      .nodejsBox {
+        background-size: 4.25rem 4.5rem;
+      }
+  }
+@media screen and (max-width: 500px) {
+    .skillBox {
+        height: 4rem;
+        width: 4rem;
+        background-size: 3rem 3.5rem;
+      }
+      .reactBox {
+        background-size: 3.75rem 3.5rem;
+      }
+      .nodejsBox {
+        background-size: 3.25rem 3.5rem;
+      }}
+@media screen and (max-width: 430px) {
+    .skillBox {
+        height: 3.5rem;
+        width: 3.5rem;
+        background-size: 2rem 2.5rem;
+      }
+      .reactBox {
+        background-size: 2.75rem 2.5rem;
+      }}
+/*when device is horizontal*/
+@media screen and (max-width: 900px) and (orientation: landscape) {
+    .skillBox {
+        height: 5.5rem;
+        width: 5.5rem;
+        background-size: 4rem 4.5rem;
+      }
+      .reactBox {
+        background-size: 4.75rem 4.5rem;
+      }
+      .nodejsBox {
+        background-size: 4.25rem 4.5rem;
+      }
+}
+@media screen and (max-width: 550px) and (orientation: landscape) {
+    .skillBox {
+        height: 4rem;
+        width: 4rem;
+        background-size: 2.5rem 3rem;
+      }
+      .reactBox {
+        background-size: 3.25rem 3rem;
+      }
+      .nodejsBox {
+        background-size: 2.75rem 3rem;
+      }
+}
 .htmlBox {
   background-image: url("img/html.png");
 }
@@ -117,6 +177,18 @@ span {
 }
 .end {
   margin-left: 10px;
+}
+@media screen and (max-width: 850px) and (max-height: 600px) {
+    .start {
+        margin-right: 6px;
+      }
+      .middle {
+        margin-left: 6px;
+        margin-right: 6px;
+      }
+      .end {
+        margin-left: 6px;
+      }
 }
 /* skillTextBox consists of 5 boxes in a div which is .skillsTextContainer. I want the 5 boxes to overlap */
 .skillsTextContainer {
